# MTRX3760-Project-2

./: .gitignore  CMakeLists.txt  DASHBOARD_README.md  README.md  delivery_commander.cpp  robot_dashboard.html  robot_dashboard_bridge.py  run_mode_selector.sh
battery_monitor/: CMakeLists.txt  integration.md  package.xml  t.md
battery_monitor/include/battery_monitor/: battery.hpp  logger.hpp
battery_monitor/launch/: battery_monitor.launch.py
battery_monitor/src/: battery.cpp  battery_monitor_node.cpp  logger.cpp
branches/aruco-node-detector/: package.xml
branches/aruco-node-detector/include/aruco_detector/: aruco_detector_node.hpp  aruco_pose_node.hpp
branches/wall_follower/: CMakeLists.txt
launch/: aruco_detector.launch.py
params/: aruco_params.yaml
robot_drive/: CMakeLists.txt  package.xml
robot_drive/include/robot_drive/: low_battery_homing.hpp  wall_follower.hpp
robot_drive/src/: wall_follower.cpp
src/: aruco_pose_node.cpp
src/aruco_detector/: CMakeLists.txt
src/aruco_detector/include/aruco_detector/: aruco_base.hpp  aruco_pose_node.hpp
src/aruco_detector/launch/: aruco_detector.launch.py  aruco_pose_node.launch.py
src/aruco_detector/src/: aruco_base.cpp  aruco_detector_node.cpp  aruco_pose_node.cpp
src/battery_monitor/: CMakeLists.txt  package.xml
src/battery_monitor/include/battery_monitor/: battery.hpp
src/battery_monitor/launch/: battery_monitor.launch.py
src/battery_monitor/src/: battery_monitor_node.cpp  logger.cpp
src/delivery_commander/: CMakeLists.txt  package.xml
src/delivery_commander/include/delivery_navigator/: delivery_navigator.hpp
src/delivery_commander/src/: delivery_navigator.cpp
src/inspection_bringup/: package.xml  setup.cfg  setup.py
src/inspection_bringup/launch/: inspection.launch.py
src/mode_selector/: CMakeLists.txt  package.xml
src/mode_selector/config/: mapper_params_online_async.yaml  mapping.rviz
src/mode_selector/include/mode_selector/: base_robot.hpp  delivery_robot.hpp  inspection_robot.hpp
src/mode_selector/src/: base_robot.cpp  delivery_robot.cpp  inspection_robot.cpp  robot_mode_selector.cpp
src/robot_drive/: CMakeLists.txt  package.xml
src/robot_drive/include/maze_explorer/: maze_explorer.hpp
src/robot_drive/include/robot_drive/: low_battery_homing.hpp
src/robot_drive/include/wall_follower/: home_detection.hpp  wall_follower.hpp
src/robot_drive/launch/: low_battery_homing.launch.py
src/robot_drive/src/: home_detection.cpp  low_battery_homing.cpp  maze_explorer.cpp  wall_follower.cpp
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: custom_maze.launch.py  custom_obstacle_world.launch.py  two_isles_2m.launch.py
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: custom_maze.world  custom_obstacle_world.world  two_isles_2m.world
src/wall_follower/: CMakeLists.txt  package.xml
src/wall_follower/include/wall_follower/: wall_follower.hpp
src/wall_follower/src/: wall_follower.cpp
wall_follower/: package.xml
wall_follower/include/wall_follower/: wall_follower.hpp
wall_follower/src/: wall_follower.cpp
wall_follower_c/: CMakeLists.txt  package.xml
wall_follower_c/src/: wall_follower.cpp
