<?xml version="1.0"?>
<package format="3">
  <name>battery_monitor</name>
  <version>0.0.1</version>
  <description>Battery monitoring node for TurtleBot3</description>
  <maintainer email="ayeshamusarrat6@gmail.com">Ayesha Musarrat</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

