<?xml version="1.0"?>
<package format="3">
  <name>robot_drive</name>
  <version>0.0.1</version>
  <description>
    Robot drive control and navigation package for MTRX3760 Project 2.
    Includes low-battery homing behaviour and launch integration.
  </description>

  <maintainer email="raquel.kampel@sydney.edu.au">Raquel Kampel</maintainer>
  <license>MIT</license>

  <!-- Core build dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

