<?xml version="1.0"?>
<package format="3">
  <name>aruco_detector</name>
  <version>0.1.0</version>
  <description>ROS 2 node that detects ArUco markers using OpenCV and publishes poses/TF.</description>
  <maintainer email="rkam4910@uni.sydney.edu.au">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>opencv</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
